# pypkg

./: README.md  Testing_Packages_and_Library.ipynb  Testing_packages_and_library.ipynb  pyproject.toml  setup.py  setup_test.py
pypkg/: __init__.py
pypkg/pylib_a/: __init__.py
pypkg/pylib_b/: __init__.py  randomclass.py
pypkg1/: __init__.py  pylib1.py
