[project]
name = "pypkg"
version = "0.1.0"
authors = [
  { name="peeya", email="your.email@example.com" },
]
description = "A package with two libraries and different dependencies."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
# Dependencies for the main package, if any, or common to both libraries
# For example:
requests = ">=2.28.1"

[project.optional-dependencies]
# Dependencies specific to pylib_a
pylib_a_deps = [
    "numpy>=1.20.0",
]

# Dependencies specific to pylib_b
pylib_b_deps = [
    "torch",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"