[project]
name = "pypkg"
version = "0.1.0"
authors = [
  { name="peeya", email="your.email@example.com" },
]
description = "A package with two libraries and different dependencies."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# PEP 621 requires dependencies to be an array of strings
dependencies = [
  "requests>=2.28.1",
]

[project.optional-dependencies]
# Dependencies specific to pylib_a
pylib_a_deps = [
    "numpy>=1.20.0",
]

# Dependencies specific to pylib_b
pylib_b_deps = [
    "ralf",
]

# Console script entry points
[project.scripts]
pypkg_a = "pypkg.pylib_a:show"
# pypkg_b = "pypkg.pylib_b:show"
pypkg1 = "pypkg1:show"

# Ensure setuptools finds the package and subpackages
[tool.setuptools.packages.find]
include = ["pypkg*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"